react-vite/src/components/SignupFormModal/SignupForm.css
.signup-modal-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    background-color: rgb(0, 0, 0);
    text-align: center;
    height: 95vh;
    overflow: scroll;
    scroll-behavior: smooth;
    scrollbar-width: none;
    padding-bottom: 1rem;
    position: relative;


}

#signup-form {
    display: grid;
    color: white;
    width: 95%;
    margin: 0 auto;



}


#signup-title {
    font-size: 3rem;
    color: white;

}

#signup-form label {
    font-size: 20px;
    color: rgb(252, 54, 202);

}

#signup-form input {
width: 100%;
text-align: center;
outline-color: white;
transition: outline-color 0.3s ease



}

#signup-form button {
    padding: 3px;
    border-radius: 30px;
    text-align: center;
    font-size: 1rem;
    color: black;
    font-weight: 500;
    background-color: rgb(252, 54, 202);
    border: 2px solid white;
    width: 80%;
    margin: 0 auto;
    cursor: pointer;


}



.tier-wrapper p {
    font-size: 1rem;
    color: rgb(212, 211, 211);
    font-weight: 400;

}

.subscription-container {
    display: grid;
    width: 100%;

}

.subscription-container h1 {
    font-size: 2rem;
    color: white;
}

.subscription-container h2 {
    color:rgb(255, 255, 255);
    font-weight: 500;

}

.duration-wrapper {

    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    text-align: center;
    padding: 1rem;

}

.duration-wrapper input {
    width: fit-content;
    height: 80%;
    cursor: pointer;
}

#free-input {
    width: fit-content;
    height: 20%;
    cursor: pointer;
}

#close-text {
    position: absolute;
    top: 0;
    right: 0;
    padding: 10px;
    display: grid;
    font-size: 2rem;


}


@media screen and (max-width: 768px) {
    .signup-modal-container {
        width: 100%;
        height: 100%;
        position: static;
    }

    #close-text {
        position: absolute;
        top: 0;
        right: 0;
        padding: 10px;
        display: grid;
        font-size: 1rem;


    }
}

